--- a/web/app/themes/flexor/resources/styles/editor.scss
+++ b/web/app/themes/flexor/resources/styles/editor.scss
@@ -7,3 +7,26 @@
 .wp-block-create-block-swiper-logo-slider {
     border: 1px dotted #f00;
 }
+
+.has-raleway-font-family{
+    font-family: var(--heading-font);
+}
+
+.wp-block-image-selector-example-image-selector {
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.wp-block-image-selector-example-image {
+    .components-spinner {
+        margin: 0;
+        float: none;
+    }
+
+    // Space consecutive buttons evenly.
+    .components-button+.components-button {
+        margin-top: 1em;
+        margin-right: 8px;
+    }
+}
