--- a/web/app/themes/flexor/resources/styles/app.scss
+++ b/web/app/themes/flexor/resources/styles/app.scss
@@ -1,4 +1,8 @@
 @import './flexor.scss';
-@import '~bootstrap/scss/bootstrap';
-@import '~bootstrap-icons/font/bootstrap-icons';
+@import 'bootstrap/scss/bootstrap';
+@import 'bootstrap-icons/font/bootstrap-icons';
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+
+.stack-column {
+    gap: 0.5em !important;
+}
