--- a/web/app/themes/flexor/resources/styles/editor.scss
+++ b/web/app/themes/flexor/resources/styles/editor.scss
@@ -4,8 +4,6 @@
  * Replace them with your own styles or remove the file completely.
  */
 
- @import 'app';
-
 .wp-block-create-block-swiper-logo-slider {
     border: 1px dotted #f00;
 }
@@ -36,3 +34,5 @@
 .has-raleway-font-family {
     font-family: var(--heading-font);
 }
+
+@import './base.scss'
