Icon Block Component Feature
- Added Bootstrap Icons into the Sage Package
- Added Bootstrap SVG function to compile it into an array of IconSets
- Added new package called `svgToJson` to use the command on finding input dir and output it into JS file for easy configuration into `registerIcons` function.
- Added Screenshots and its description for it to show on Themes Page.
- Replace Block Patterns Icon Block component from plugin into my own block component.
- Re-register yarn.lock to clean up the mess

--- a/web/app/themes/flexor/style.css
+++ b/web/app/themes/flexor/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name:         Sage Starter Theme
+Theme Name:         Flexor Bootstrap Theme
 Theme URI:          https://roots.io/sage/
-Description:        Sage is a WordPress starter theme.
-Version:            10.x-dev
-Author:             Roots
-Author URI:         https://roots.io/
+Description:        Custom Made by Amin Shazrin by implementing Bootstrap into Sage Template (Github: ammein)
+Version:            1.0.x-dev
+Author:             Bootstrap Made
+Author URI:         https: //bootstrapmade.com/flexor-free-multipurpose-bootstrap-template/
 Text Domain:        sage
 License:            MIT License
 License URI:        https://opensource.org/licenses/MIT
