Bootstrap Navigation Bar implemented!
- Added a few `add_filters` function into `class-wp-bootstrap-navwalker.php` file. Useful for my Flexor Template format.
- Adjust CSS file a bit on navmenu. Perhaps I have to work more on this issue where the dropdown icon did not animate when focused.
- Remove `navbar-nav` class on `menu_class` array item in `wp_nav_menu` function

--- a/web/app/themes/flexor/resources/styles/base.scss
+++ b/web/app/themes/flexor/resources/styles/base.scss
@@ -262,11 +262,13 @@
         color: var(--nav-dropdown-hover-color);
     }
 
-    .navmenu .active i,
-    .navmenu .active:focus i {
+    .navmenu .active i{
         background-color: var(--accent-color);
         color: var(--contrast-color);
-        transform: rotate(180deg);
+
+        &:focus{
+            transform: rotate(180deg);
+        }
     }
 
     .navmenu .dropdown ul {
