--- a/web/app/themes/flexor/resources/styles/base.scss
+++ b/web/app/themes/flexor/resources/styles/base.scss
@@ -966,31 +966,41 @@ section,
 
 .services .service-item {
     background-color: var(--contrast-color);
-    padding: 50px 30px;
-    margin-top: 36px;
     transition: all ease-in-out 0.3s;
     position: relative;
     border: 1px solid color-mix(in srgb, var(--default-color), transparent 85%);
     text-align: center;
 }
 
-.services .service-item .icon {
+.icon-component {
     background: var(--accent-color);
-    color: var(--contrast-color);
     margin: 0;
-    width: 72px;
-    height: 72px;
-    border-radius: 50px;
+    border-radius: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 20px;
-    font-size: 28px;
+    padding: 22px;
     transition: ease-in-out 0.3s;
+    border: 2px solid var(--accent-color);
+
+    svg {
+        fill: var(--contrast-color);
+    }
+
+    &:hover {
+        background: var(--contrast-color);
+        border: 2px solid var(--accent-color);
+
+        svg {
+            fill: var(--accent-color);
+        }
+    }
+}
+
+.services-icon-absolute {
     position: absolute;
     top: -36px;
     left: calc(50% - 36px);
-    border: 6px solid var(--background-color);
 }
 
 .services .service-item h3 {
@@ -1007,15 +1017,6 @@ section,
 }
 
 .services .service-item:hover h3 {
-    color: var(--accent-color);
-}
-
-.services .service-item:hover .icon {
-    background: var(--contrast-color);
-    border: 2px solid var(--accent-color);
-}
-
-.services .service-item:hover .icon i {
     color: var(--accent-color);
 }
 
