--- a/web/app/themes/flexor/resources/styles/editor.scss
+++ b/web/app/themes/flexor/resources/styles/editor.scss
@@ -4,6 +4,8 @@
  * Replace them with your own styles or remove the file completely.
  */
 
+ @import 'root.scss';
+
 .wp-block-create-block-swiper-logo-slider {
     border: 1px dotted #f00;
 }
