--- a/web/app/themes/flexor/resources/styles/base.scss
+++ b/web/app/themes/flexor/resources/styles/base.scss
@@ -1492,96 +1492,101 @@ section,
     margin-top: 15px;
 }
 
-.faq .faq-container .faq-item {
+.faq-item {
     position: relative;
     padding: 20px;
-    margin-bottom: 20px;
     background-color: var(--contrast-color);
     overflow: hidden;
     transition: 0.3s;
-}
 
-.faq .faq-container .faq-item:last-child {
-    margin-bottom: 0;
-}
+    &:last-child{
+        margin-bottom: 0;
+    }
 
-.faq .faq-container .faq-item h3 {
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 24px;
-    margin: 0 30px 0 32px;
-    transition: 0.3s;
-    cursor: pointer;
-}
+    &.faq-active {
+        background-color: var(--accent-color);
+        transition: 0.3s;
 
-.faq .faq-container .faq-item h3 span {
-    color: var(--accent-color);
-    padding-right: 5px;
-}
+        h3 {
+            color: var(--contrast-color);
 
-.faq .faq-container .faq-item h3:hover {
-    color: var(--accent-color);
-}
+            &:hover {
+                color: var(--contrast-color);
+            }
+        }
 
-.faq .faq-container .faq-item .faq-content {
-    display: grid;
-    grid-template-rows: 0fr;
-    transition: 0.3s ease-in-out;
-    visibility: hidden;
-    opacity: 0;
-}
+        .faq-toggle {
+            color: var(--contrast-color);
+            transform: rotate(90deg);
+        }
 
-.faq .faq-container .faq-item .faq-content p {
-    margin-bottom: 0;
-    overflow: hidden;
-}
+        .faq-icon {
+            color: var(--contrast-color);
+        }
 
-.faq .faq-container .faq-item .faq-icon {
-    position: absolute;
-    top: 22px;
-    left: 20px;
-    font-size: 20px;
-    line-height: 0;
-    transition: 0.3s;
-    color: var(--accent-color);
-}
+        .faq-content {
+            grid-template-rows: 1fr !important;
+            visibility: visible;
+            opacity: 1;
+            padding-top: 10px;
+            color: var(--contrast-color);
+        }
+    }
 
-.faq .faq-container .faq-item .faq-toggle {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    font-size: 16px;
-    line-height: 0;
-    transition: 0.3s;
-    cursor: pointer;
-}
+    .faq-toggle {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        font-size: 16px;
+        line-height: 0;
+        transition: 0.3s;
+        cursor: pointer;
 
-.faq .faq-container .faq-item .faq-toggle:hover {
-    color: var(--accent-color);
-}
+        &:hover{
+            color: var(--accent-color);
+        }
+    }
 
-.faq .faq-container .faq-active {
-    background-color: var(--accent-color);
-    transition: 0.3s;
-}
+    .faq-icon{
+        position: absolute;
+        top: 22px;
+        left: 20px;
+        font-size: 20px;
+        line-height: 0;
+        transition: 0.3s;
+        color: var(--accent-color);
+    }
 
-.faq .faq-container .faq-active h3,
-.faq .faq-container .faq-active h3:hover,
-.faq .faq-container .faq-active .faq-toggle,
-.faq .faq-container .faq-active .faq-icon,
-.faq .faq-container .faq-active .faq-content {
-    color: var(--contrast-color);
-}
+    .faq-content{
+        display: grid;
+        grid-template-rows: 0fr;
+        transition: 0.3s ease-in-out;
+        visibility: hidden;
+        opacity: 0;
 
-.faq .faq-container .faq-active .faq-content {
-    grid-template-rows: 1fr;
-    visibility: visible;
-    opacity: 1;
-    padding-top: 10px;
-}
+        p{
+            margin-bottom: 0;
+            overflow: hidden;
+        }
+    }
 
-.faq .faq-container .faq-active .faq-toggle {
-    transform: rotate(90deg);
+    h3 {
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 24px;
+        margin: 0 30px 0 32px;
+        transition: 0.3s;
+        cursor: pointer;
+
+        &:hover{
+            color: var(--accent-color);
+        }
+
+        span {
+            color: var(--accent-color);
+            padding-right: 5px;
+        }
+    }
 }
 
 /*--------------------------------------------------------------
