Link Component Done
- Added new block component named `link` that you can search in Gutenberg editor as `Link Container`.
- Added Tooltip functionality from bootstrap
- Adjust `icon` component in `customIcon.js` on setting a default style to have hover effect or not.
- Remove `classNames` for `faq` component.
- Added css styling for components in `app.scss`.
- Adjust `more-btn` styling in `base.scss`.
- Re-implement latest block patterns on `banner` & `services` patterns.
- Added `get_block_wrapper_attributes` function to implement its classname and other meta attributes onto `faq` component.
- Adjust conditional statement on blade template at `icon.blade.php`

--- a/web/app/themes/flexor/resources/styles/app.scss
+++ b/web/app/themes/flexor/resources/styles/app.scss
@@ -6,3 +6,54 @@
 .stack-column {
     gap: 0.5em !important;
 }
+
+/*--------------------------------------------------------------
+# Component Styling
+--------------------------------------------------------------*/
+
+.link-container-component {
+    text-decoration: none !important;
+    color: unset;
+    cursor: pointer;
+}
+
+.icon-component {
+    background: var(--accent-color);
+    margin: 0;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 22px;
+    transition: ease-in-out 0.3s;
+    border: 2px solid var(--accent-color);
+
+    svg {
+        fill: var(--contrast-color);
+    }
+
+    &:hover {
+        background: var(--contrast-color);
+        border: 2px solid var(--accent-color);
+
+        svg {
+            fill: var(--accent-color);
+        }
+    }
+}
+
+.icon-component-no-hover {
+    background: var(--accent-color);
+    margin: 0;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 22px;
+    transition: ease-in-out 0.3s;
+    border: 2px solid var(--accent-color);
+
+    svg {
+        fill: var(--contrast-color);
+    }
+}
