--- a/web/app/themes/flexor/resources/styles/base.scss
+++ b/web/app/themes/flexor/resources/styles/base.scss
@@ -757,13 +757,30 @@ section,
     margin-bottom: 30px;
 }
 
-.hero .content .why-box .more-btn {
+.more-btn {
     color: var(--contrast-color);
     background: color-mix(in srgb, var(--contrast-color), transparent 80%);
     display: inline-block;
     padding: 6px 30px 8px 30px;
     border-radius: 50px;
     transition: all ease-in-out 0.4s;
+
+    &:hover{
+        background: var(--contrast-color);
+        
+        p {
+            color: var(--accent-color) !important;
+        }
+
+        h1, h2, h3, h4, h5, h6{
+            color: var(--accent-color) !important;
+        }
+        
+        svg{
+            fill: var(--accent-color);
+        }
+    }
+    
 }
 
 .hero .content .why-box .more-btn i {
@@ -970,31 +987,6 @@ section,
     position: relative;
     border: 1px solid color-mix(in srgb, var(--default-color), transparent 85%);
     text-align: center;
-}
-
-.icon-component {
-    background: var(--accent-color);
-    margin: 0;
-    border-radius: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 22px;
-    transition: ease-in-out 0.3s;
-    border: 2px solid var(--accent-color);
-
-    svg {
-        fill: var(--contrast-color);
-    }
-
-    &:hover {
-        background: var(--contrast-color);
-        border: 2px solid var(--accent-color);
-
-        svg {
-            fill: var(--accent-color);
-        }
-    }
 }
 
 .services-icon-absolute {
