--- a/web/app/themes/flexor/resources/styles/app.scss
+++ b/web/app/themes/flexor/resources/styles/app.scss
@@ -2,58 +2,20 @@
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons';
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+@import 'components.scss';
 
 .stack-column {
     gap: 0.5em !important;
 }
 
-/*--------------------------------------------------------------
-# Component Styling
---------------------------------------------------------------*/
-
-.link-container-component {
-    text-decoration: none !important;
-    color: unset;
-    cursor: pointer;
+.swiper-wrapper {
+    display: flex !important;
 }
 
-.icon-component {
-    background: var(--accent-color);
-    margin: 0;
-    border-radius: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 22px;
-    transition: ease-in-out 0.3s;
-    border: 2px solid var(--accent-color);
-
-    svg {
-        fill: var(--contrast-color);
-    }
-
-    &:hover {
-        background: var(--contrast-color);
-        border: 2px solid var(--accent-color);
-
-        svg {
-            fill: var(--accent-color);
-        }
-    }
+.swiper-slide {
+    width: 100% !important;
 }
 
-.icon-component-no-hover {
-    background: var(--accent-color);
-    margin: 0;
-    border-radius: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 22px;
-    transition: ease-in-out 0.3s;
-    border: 2px solid var(--accent-color);
-
-    svg {
-        fill: var(--contrast-color);
-    }
+figure{
+    clip-path:fill-box;
 }
