--- a/web/app/themes/flexor/resources/styles/editor.scss
+++ b/web/app/themes/flexor/resources/styles/editor.scss
@@ -5,6 +5,7 @@
  */
 
  @import 'root.scss';
+ @import 'components.scss';
 
 .wp-block-create-block-swiper-logo-slider {
     border: 1px dotted #f00;
