--- a/web/app/themes/flexor/resources/styles/base.scss
+++ b/web/app/themes/flexor/resources/styles/base.scss
@@ -377,11 +377,26 @@
     border-color: var(--accent-color);
 }
 
+.footer .menu-lain {
+    height: 200px;
+    column-gap: 20px;
+}
+
 .footer h4 {
     font-size: 16px;
     font-weight: bold;
     position: relative;
     padding-bottom: 12px;
+}
+
+.footer .footer-etc {
+    padding-bottom: 0px !important;
+}
+
+.footer h5 {
+    font-size: 14px;
+    font-weight: bold;
+    position: relative;
 }
 
 .footer .footer-links {
@@ -404,10 +419,6 @@
     padding: 10px 0;
     display: flex;
     align-items: center;
-}
-
-.footer .footer-links ul li:first-child {
-    padding-top: 0;
 }
 
 .footer .footer-links ul a {
