Fixed Container Component without Functionality
- Added a new component named fixed container without functionality yet.
- Remove unnecessary color palette
- Add Footer to each page style
- Add component styling container
- Add Fixed Component in `poet.php` file

--- a/web/app/themes/flexor/resources/styles/components.scss
+++ b/web/app/themes/flexor/resources/styles/components.scss
@@ -151,3 +151,14 @@
         }
     }
 }
+
+.fixed-component-container {
+    position: sticky !important;
+}
+
+.fixed-mobile-container{
+    display: inline-flex;
+    text-align: center;
+    align-content: center;
+    z-index: 99999;
+}
