--- a/web/app/themes/flexor/resources/styles/editor.scss
+++ b/web/app/themes/flexor/resources/styles/editor.scss
@@ -4,8 +4,14 @@
  * Replace them with your own styles or remove the file completely.
  */
 
- @import 'root.scss';
- @import 'components.scss';
+@import 'root.scss';
+@import 'components.scss';
+@import "bootstrap/scss/functions";
+@import "bootstrap/scss/variables";
+@import "bootstrap/scss/variables-dark";
+@import "bootstrap/scss/maps";
+@import "bootstrap/scss/mixins";
+@import "bootstrap/scss/utilities";
 
 .wp-block-create-block-swiper-logo-slider {
     border: 1px dotted #f00;
@@ -36,6 +42,10 @@
 
 .has-raleway-font-family {
     font-family: var(--heading-font);
+}
+
+.fixed-component-container {
+    position: sticky !important;
 }
 
 @import './base.scss'
