Finalized Functionality & Designs!
- Added `Custom-Controls` component that were created as plugin and created a new repo for it to be able to use as `muplugin` in IDBKL wordpress.
- Added a silent filter on issue "Wordpress detected as being under version control git".
- Adjust `SiteComposer.php` in `get_site_phone` to output phone number based on Templates.
- Adjust public path in `bud.config.js`.
- Added new `marginMobile` to control margin button in mobile responsive view on `Fixed` block component.
- Add new`Skyrocket` custom controls inside `customizer.php`.
- Added new `BoxControl` react component in `fixed.js` to control `marginMobile` attribute.
- Fix bug in `link.js` where the previous bug happen when adding this block component editor, returns error even when idle.
- Remove bootstrap tooltip in `sage/link` register that somehow unsatisfy UX.
- Added `.unclickable` classname for user who anyone can use this classname to avoid clickable item.
- Adjusted Header background color and its appropriate items color.
- Simple fix on `component.scss` where `--bs-offcanvas-zindex` not function when in editing mode.
- Added `$data->marginMobile` in `fixed.blade.php`.
- Recover `index.blade.php` & `template-peperiksaan.blade.php` initial blade templates.
- Applied `htmlspecialchars_decode(nl2br($address))` in `footer.blade.php` & `peperiksaan-footer.blade.php`.
- Generated new `theme.json`.

--- a/web/app/themes/flexor/resources/styles/base.scss
+++ b/web/app/themes/flexor/resources/styles/base.scss
@@ -5,7 +5,7 @@
     color: var(--default-color);
     transition: all 0.5s;
     z-index: 997;
-    background-color: var(--background-color);
+    background-color: var(--accent-color);
 }
 
 .header .topbar {
@@ -70,15 +70,15 @@
     margin-right: 8px;
 }
 
-.header .logo h1 {
+.scrolled .header {
+    box-shadow: 0px 0 18px color-mix(in srgb, var(--default-color), transparent 85%);
+}
+
+.sitename {
     font-size: 30px;
     margin: 0;
     font-weight: 700;
     color: var(--heading-color);
-}
-
-.scrolled .header {
-    box-shadow: 0px 0 18px color-mix(in srgb, var(--default-color), transparent 85%);
 }
 
 /*--------------------------------------------------------------
@@ -104,7 +104,7 @@
 
     .navmenu a,
     .navmenu a:focus {
-        color: var(--nav-color);
+        color: var(--background-color);
         padding: 18px 12px;
         font-size: 15px;
         font-family: var(--nav-font);
@@ -131,7 +131,7 @@
     .navmenu li:hover>a,
     .navmenu .active,
     .navmenu .active:focus {
-        color: var(--nav-hover-color);
+        color: var(--nav-color);
     }
 
     .navmenu .dropdown ul {
@@ -194,7 +194,7 @@
 /* Navmenu - Mobile */
 @media (max-width: 1199px) {
     .mobile-nav-toggle {
-        color: var(--nav-color);
+        color: var(--background-color);
         font-size: 28px;
         line-height: 0;
         margin-right: 10px;
