--- a/web/app/themes/flexor/resources/styles/components.scss
+++ b/web/app/themes/flexor/resources/styles/components.scss
@@ -166,7 +166,7 @@
     display: inline-flex;
     text-align: center;
     align-content: center;
-    z-index: var(--bs-offcanvas-zindex);
+    z-index: 1045;
 }
 
 .offcanvas {
