Final Sign Off!
- Implement `is_page_template` in `get_site_email` to dynamically check either current page is in peperiksaan or default template.
- Added new customizer control for `peperiksaan_email`.
- Added `msc.webp` image.
- Added `qr-code-location.png` image.
- Adjust `.slick-next` & `.slick-previ` classes to appear on top of the slider and make it white color instead.
- Add the images into footer.

--- a/web/app/themes/flexor/resources/styles/app.scss
+++ b/web/app/themes/flexor/resources/styles/app.scss
@@ -27,3 +27,32 @@ figure{
 .unclickable {
     pointer-events: none;
 }
+
+p{
+    margin-bottom: 0 !important;
+}
+
+// Override Arrow Size
+.slick-next:before,
+.slick-prev:before {
+    font-size: 40px !important;
+    color: var(--background-color) !important;
+}
+
+.slick-next,
+.slick-prev {
+    z-index: 999999;
+}
+
+.slick-prev {
+    left: 20px;
+}
+
+.slick-next {
+    right: 30px;
+}
+
+.justify {
+    text-align: justify;
+    text-justify: inter-word;
+}
