--- a/web/app/themes/flexor/resources/styles/root.scss
+++ b/web/app/themes/flexor/resources/styles/root.scss
@@ -46,3 +46,26 @@
 :root {
     scroll-behavior: smooth;
 }
+
+@mixin underline {
+    &::after {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+        content: "";
+        background-color: var(--accent-color);
+        width: 0%;
+        height: 4px;
+        transition: all 0.5s;
+    }
+}
+
+@mixin underline_hover {
+    &:hover {
+        &::after {
+            width: 100%;
+        }
+    }
+}
