--- a/web/app/themes/flexor/resources/styles/base.scss
+++ b/web/app/themes/flexor/resources/styles/base.scss
@@ -218,7 +218,7 @@
 /* Navmenu - Mobile */
 @media (max-width: 1199px) {
     .mobile-nav-toggle {
-        color: var(--background-color);
+        color: var(--accent-color);
         font-size: 28px;
         line-height: 0;
         margin-right: 10px;
