Add functionality for Excerpt to have custom HTML output and tweaked some css styling to be able to display the link styles correctly.

--- a/web/app/themes/flexor/resources/styles/base.scss
+++ b/web/app/themes/flexor/resources/styles/base.scss
@@ -121,6 +121,7 @@
 
     .navmenu a,
     .navmenu a:focus {
+        text-decoration: none;
         color: var(--nav-color);
         padding: 18px 12px;
         font-size: 15px;
@@ -135,6 +136,7 @@
 
     .navmenu a i,
     .navmenu a:focus i {
+        text-decoration: none;
         font-size: 12px;
         line-height: 0;
         margin-left: 5px;
@@ -247,6 +249,7 @@
 
     .navmenu a,
     .navmenu a:focus {
+        text-decoration: none;
         color: var(--nav-dropdown-color);
         padding: 10px 20px;
         font-family: var(--nav-font);
@@ -261,6 +264,7 @@
 
     .navmenu a i,
     .navmenu a:focus i {
+        text-decoration: none;
         font-size: 12px;
         line-height: 0;
         margin-left: 5px;
