--- a/web/app/themes/flexor/resources/styles/flexor.scss
+++ b/web/app/themes/flexor/resources/styles/flexor.scss
@@ -18,15 +18,19 @@ body {
     font-family: var(--default-font);
 }
 
-a {
-    color: var(--accent-color);
-    text-decoration: none !important;
-    transition: 0.3s;
+.wp-block-post-excerpt a {
+    color: var(--accent-color) !important;
+    text-decoration: underline !important;
 }
 
-a:hover {
+.wp-block-post-excerpt a:hover{
     color: color-mix(in srgb, var(--accent-color), transparent 25%);
     text-decoration: none;
+}
+
+a {
+    text-decoration: none;
+    transition: 0.3s;
 }
 
 .button-component {
@@ -49,6 +53,42 @@ h5,
 h6 {
     color: var(--heading-color);
     font-family: var(--heading-font);
+}
+
+blockquote {
+    font-size: 1.4em;
+    width: 60%;
+    margin: 50px auto;
+    font-family: Open Sans;
+    font-style: italic;
+    color: var(--default-color);
+    padding: 1.2em 30px 1.2em 75px;
+    border-left: 8px solid var(--accent-color);
+    line-height: 1.6;
+    position: relative;
+    background: var(--background-contrast-color);
+}
+
+blockquote::before {
+    font-family: Arial;
+    content: "\201C";
+    color: var(--accent-color);
+    font-size: 4em;
+    position: absolute;
+    left: 10px;
+    top: -10px;
+}
+
+blockquote::after {
+    content: '';
+}
+
+blockquote span {
+    display: block;
+    color: var(--contrast-color);
+    font-style: normal;
+    font-weight: bold;
+    margin-top: 1em;
 }
 
 @import 'base.scss'
