Done all until locale

--- a/web/app/themes/flexor/resources/styles/app.scss
+++ b/web/app/themes/flexor/resources/styles/app.scss
@@ -83,3 +83,7 @@ hr {
 .swiper-pagination-bullet-active {
     background-color: var(--accent-color) !important;
 }
+
+.lat-long{
+    color: var(--accent-color);
+}
